Format date on x-axis in temperature line graph

--- a/Weather_Advisor.ipynb
+++ b/Weather_Advisor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcaaW5ox41tjkmzbcsfvWB",
+      "authorship_tag": "ABX9TyOKRHm5gixcaofFJxbDWUq/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,12 +73,13 @@
         "import logging\n",
         "import time\n",
         "from datetime import datetime\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.dates as mdates"
       ],
       "metadata": {
         "id": "gS5tbInPGLeh"
       },
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -905,6 +906,11 @@
         "        fig, ax = plt.subplots(figsize=(8, 5))\n",
         "        ax.plot(dates, temperatures, marker='o', linestyle='-', color='blue', label='Forecast Temperature (°C)')\n",
         "\n",
+        "        # Format date on x-axis\n",
+        "        ax.xaxis.set_major_formatter(mdates.DateFormatter('%Y-%m-%d'))\n",
+        "        ax.xaxis.set_major_locator(mdates.DayLocator())\n",
+        "        plt.xticks(rotation=45)\n",
+        "\n",
         "        # Step 3: Set graph title and labels\n",
         "        ax.set_title(\"Daily Temperature\")\n",
         "        ax.set_xlabel(\"Date\")\n",
@@ -931,7 +937,7 @@
       "metadata": {
         "id": "zUClCbVTLfdS"
       },
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": []
     },
     {
