Add generate weather response

--- a/Weather_Advisor.ipynb
+++ b/Weather_Advisor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOfoEuOzkKbJsoOtcZefKGJ",
+      "authorship_tag": "ABX9TyPX6IgUq21106rIYOgL6haO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1140,6 +1140,80 @@
           "name": "stdout",
           "text": [
             "{'location': 'Kuala Lumpur', 'days': 4, 'attribute': 'temperature'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate_weather_response(parsed_question, weather_data):\n",
+        "    location = parsed_question.get(\"location\", \"the location\")\n",
+        "    days = parsed_question.get(\"days\", 1)\n",
+        "    attribute = parsed_question.get(\"attribute\", \"weather\")\n",
+        "\n",
+        "    # Choose current data or forecast\n",
+        "    if days == -1:\n",
+        "        if \"current\" in weather_data and weather_data[\"current\"]:\n",
+        "            data = weather_data[\"current\"][0]\n",
+        "        else:\n",
+        "            return f\"Sorry, I couldn't retrieve current weather data for {location}.\"\n",
+        "    else:\n",
+        "        if \"forecast\" in weather_data and weather_data[\"forecast\"]:\n",
+        "            data = weather_data[\"forecast\"]\n",
+        "        else:\n",
+        "            return f\"Sorry, I couldn't retrieve forecast data for {location}.\"\n",
+        "    response = f\"The {attribute} in {location} \"\n",
+        "    for item in data:\n",
+        "        # Format responses based on attribute\n",
+        "        if attribute == \"temperature\":\n",
+        "            response += f\"at {item['datetime']} is around {item['temperature']}°C \"\n",
+        "        elif attribute == \"humidity\":\n",
+        "            response += f\"at {item['datetime']} is {item['humidity']}% \"\n",
+        "        elif attribute == \"wind speed\":\n",
+        "            response += f\"at {item['datetime']} is {item['wind speed']}km/h \"\n",
+        "        elif attribute == \"chance of rain\" and days != -1:\n",
+        "            if data['rain_percentage'] > 50:\n",
+        "              response += f\"at {item['datetime']} is {item['rain percentage']}% \"\n",
+        "            else:\n",
+        "              response += f\"at {item['datetime']} is {item['rain percentage']}% \"\n",
+        "        elif attribute == \"sunny\" and days != -1:\n",
+        "            if data['rain percentage'] > 50:\n",
+        "              return f\"Yes, it will be a sunny day\"\n",
+        "            else:\n",
+        "              return f\"No, it might be rain.\"\n",
+        "        elif attribute == \"weather\":\n",
+        "            response += f\"at {item['datetime']} is {item['weather condition']} \"\n",
+        "        else:\n",
+        "            return f\"Please restructure your sentence.\"\n",
+        "\n",
+        "    return response\n"
+      ],
+      "metadata": {
+        "id": "fS2AW7nr_ykv"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(generate_weather_response(test_parsed_questions, test_data))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YPqXQrsTAr5j",
+        "outputId": "61767296-c810-4cf3-ff70-746b7c5e046d"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The temperature in Kuala Lumpur at 2025-05-07 is around 28.0°C at 2025-05-08 is around 28.0°C at 2025-05-09 is around 28.0°C at 2025-05-10 is around 27.6°C at 2025-05-11 is around 27.2°C \n"
           ]
         }
       ]
