Added weather attributes response to make the generate weather response modular

--- a/Weather_Advisor.ipynb
+++ b/Weather_Advisor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPX6IgUq21106rIYOgL6haO",
+      "authorship_tag": "ABX9TyPjKyHuGYf4B0cXAgS/ipJ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
         "import pandas as pd\n",
         "import logging\n",
         "import time\n",
-        "from datetime import datetime\n",
+        "from datetime import datetime, timedelta\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.dates as mdates\n",
         "import numpy as np\n",
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "gS5tbInPGLeh"
       },
-      "execution_count": 29,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1123,7 +1123,7 @@
     {
       "cell_type": "code",
       "source": [
-        "test_parsed_questions = parse_weather_question(\"What is Kuala Lumpur temperature in next 4 days\")\n",
+        "test_parsed_questions = parse_weather_question(\"What is Kuala Lumpur temperature today\")\n",
         "print(test_parsed_questions)"
       ],
       "metadata": {
@@ -1131,15 +1131,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LHlVQTQe6Yo_",
-        "outputId": "a7a4a912-fbe9-4958-d764-f89302f8c6ad"
+        "outputId": "32b31ffa-c4d5-4d28-cdaa-1bbd445af045"
       },
-      "execution_count": 31,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'location': 'Kuala Lumpur', 'days': 4, 'attribute': 'temperature'}\n"
+            "{'location': 'Kuala Lumpur', 'days': 0, 'attribute': 'temperature'}\n"
           ]
         }
       ]
@@ -1147,11 +1147,60 @@
     {
       "cell_type": "code",
       "source": [
+        "def weather_attributes_response(response, attribute, item, days = 0):\n",
+        "    # Format responses based on attribute\n",
+        "    if attribute == \"temperature\":\n",
+        "        response += f\"is around {item['temperature']}°C \"\n",
+        "    elif attribute == \"humidity\":\n",
+        "        response += f\"is {item['humidity']}% \"\n",
+        "    elif attribute == \"wind speed\":\n",
+        "        response += f\"is {item['wind speed']}km/h \"\n",
+        "    elif attribute == \"chance of rain\" and days != -1:\n",
+        "        date_str = item['datetime']\n",
+        "        item_date = datetime.strptime(date_str, \"%Y-%m-%d\").date()\n",
+        "        today = datetime.today().date()\n",
+        "        tomorrow = today + timedelta(days=1)\n",
+        "\n",
+        "        if item_date == today:\n",
+        "            day_label = \"today\"\n",
+        "        elif item_date == tomorrow:\n",
+        "            day_label = \"tomorrow\"\n",
+        "        else:\n",
+        "            day_label = f\"on {date_str}\"\n",
+        "\n",
+        "        chance = item['rain percentage']\n",
+        "        if chance > 50:\n",
+        "            response += f\"There is a high chance of rain {day_label} — {chance}%.\"\n",
+        "        else:\n",
+        "            response += f\"There is a low chance of rain {day_label} — {chance}%. \"\n",
+        "    elif attribute == \"sunny\" and days != -1:\n",
+        "        if item['rain percentage'] > 50:\n",
+        "          return f\"is a sunny da y\"\n",
+        "        else:\n",
+        "          return f\"is rainy day. \"\n",
+        "    elif attribute == \"weather condition\":\n",
+        "        response += f\"is {item['weather condition']} \"\n",
+        "    elif attribute == \"precipitation\":\n",
+        "        response += f\"is {item['precipitation']}mm \"\n",
+        "    else:\n",
+        "        return f\"Please restructure your sentence.\"\n",
+        "\n",
+        "    return response"
+      ],
+      "metadata": {
+        "id": "237r3P20FhbU"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def generate_weather_response(parsed_question, weather_data):\n",
         "    location = parsed_question.get(\"location\", \"the location\")\n",
         "    days = parsed_question.get(\"days\", 1)\n",
-        "    attribute = parsed_question.get(\"attribute\", \"weather\")\n",
-        "\n",
+        "    attribute = parsed_question.get(\"attribute\", \"weather condition\")\n",
+        "    response = \"\"\n",
         "    # Choose current data or forecast\n",
         "    if days == -1:\n",
         "        if \"current\" in weather_data and weather_data[\"current\"]:\n",
@@ -1163,36 +1212,32 @@
         "            data = weather_data[\"forecast\"]\n",
         "        else:\n",
         "            return f\"Sorry, I couldn't retrieve forecast data for {location}.\"\n",
-        "    response = f\"The {attribute} in {location} \"\n",
-        "    for item in data:\n",
-        "        # Format responses based on attribute\n",
-        "        if attribute == \"temperature\":\n",
-        "            response += f\"at {item['datetime']} is around {item['temperature']}°C \"\n",
-        "        elif attribute == \"humidity\":\n",
-        "            response += f\"at {item['datetime']} is {item['humidity']}% \"\n",
-        "        elif attribute == \"wind speed\":\n",
-        "            response += f\"at {item['datetime']} is {item['wind speed']}km/h \"\n",
-        "        elif attribute == \"chance of rain\" and days != -1:\n",
-        "            if data['rain_percentage'] > 50:\n",
-        "              response += f\"at {item['datetime']} is {item['rain percentage']}% \"\n",
-        "            else:\n",
-        "              response += f\"at {item['datetime']} is {item['rain percentage']}% \"\n",
-        "        elif attribute == \"sunny\" and days != -1:\n",
-        "            if data['rain percentage'] > 50:\n",
-        "              return f\"Yes, it will be a sunny day\"\n",
-        "            else:\n",
-        "              return f\"No, it might be rain.\"\n",
-        "        elif attribute == \"weather\":\n",
-        "            response += f\"at {item['datetime']} is {item['weather condition']} \"\n",
-        "        else:\n",
-        "            return f\"Please restructure your sentence.\"\n",
+        "\n",
+        "    if days == 0 and attribute != \"chance of rain\":\n",
+        "        response = f\"The {attribute} today in {location} \"\n",
+        "        response = weather_attributes_response(response, attribute, data[0], days)\n",
+        "    elif days == 0 and attribute == \"chance of rain\":\n",
+        "        response = weather_attributes_response(response, attribute, data[0], days)\n",
+        "\n",
+        "    if days == 1 and attribute != \"chance of rain\":\n",
+        "        response = f\"The {attribute} tomorrow in {location} \"\n",
+        "        response = weather_attributes_response(response, attribute, data[1], days)\n",
+        "    elif days == 1 and attribute == \"chance of rain\":\n",
+        "        response = weather_attributes_response(response, attribute, data[1], days)\n",
+        "\n",
+        "    if days > 1:\n",
+        "        response = f\"The {attribute} in {location}: \"\n",
+        "        for item in data:\n",
+        "            if attribute != \"chance of rain\":\n",
+        "                response += f\"on {item['datetime']} \"\n",
+        "            response = weather_attributes_response(response, attribute, item, days)\n",
         "\n",
         "    return response\n"
       ],
       "metadata": {
         "id": "fS2AW7nr_ykv"
       },
-      "execution_count": 32,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -1205,15 +1250,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YPqXQrsTAr5j",
-        "outputId": "61767296-c810-4cf3-ff70-746b7c5e046d"
+        "outputId": "41d7e29c-162e-48f4-da5c-f498a4e65592"
       },
-      "execution_count": 33,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The temperature in Kuala Lumpur at 2025-05-07 is around 28.0°C at 2025-05-08 is around 28.0°C at 2025-05-09 is around 28.0°C at 2025-05-10 is around 27.6°C at 2025-05-11 is around 27.2°C \n"
+            "The temperature today in Kuala Lumpur is around 28.0°C <br>\n"
           ]
         }
       ]
