--- a/Weather_Advisor.ipynb
+++ b/Weather_Advisor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPjKyHuGYf4B0cXAgS/ipJ+",
+      "authorship_tag": "ABX9TyNMgKRJxRdAydDCKs9cdxeH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1123,7 +1123,7 @@
     {
       "cell_type": "code",
       "source": [
-        "test_parsed_questions = parse_weather_question(\"What is Kuala Lumpur temperature today\")\n",
+        "test_parsed_questions = parse_weather_question(\"Will kuala lumpur rain in next 5 days?\")\n",
         "print(test_parsed_questions)"
       ],
       "metadata": {
@@ -1131,15 +1131,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LHlVQTQe6Yo_",
-        "outputId": "32b31ffa-c4d5-4d28-cdaa-1bbd445af045"
+        "outputId": "4f1ce544-c2a9-438d-efe8-ca45ba941a31"
       },
-      "execution_count": 40,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'location': 'Kuala Lumpur', 'days': 0, 'attribute': 'temperature'}\n"
+            "{'location': 'kuala lumpur', 'days': 5, 'attribute': 'chance of rain'}\n"
           ]
         }
       ]
@@ -1147,50 +1147,62 @@
     {
       "cell_type": "code",
       "source": [
-        "def weather_attributes_response(response, attribute, item, days = 0):\n",
-        "    # Format responses based on attribute\n",
-        "    if attribute == \"temperature\":\n",
-        "        response += f\"is around {item['temperature']}°C \"\n",
-        "    elif attribute == \"humidity\":\n",
-        "        response += f\"is {item['humidity']}% \"\n",
-        "    elif attribute == \"wind speed\":\n",
-        "        response += f\"is {item['wind speed']}km/h \"\n",
-        "    elif attribute == \"chance of rain\" and days != -1:\n",
-        "        date_str = item['datetime']\n",
-        "        item_date = datetime.strptime(date_str, \"%Y-%m-%d\").date()\n",
-        "        today = datetime.today().date()\n",
-        "        tomorrow = today + timedelta(days=1)\n",
+        "def format_day_label(item_date):\n",
+        "    today = datetime.today().date()\n",
+        "    tomorrow = today + timedelta(days=1)\n",
         "\n",
-        "        if item_date == today:\n",
-        "            day_label = \"today\"\n",
-        "        elif item_date == tomorrow:\n",
-        "            day_label = \"tomorrow\"\n",
-        "        else:\n",
-        "            day_label = f\"on {date_str}\"\n",
-        "\n",
-        "        chance = item['rain percentage']\n",
-        "        if chance > 50:\n",
-        "            response += f\"There is a high chance of rain {day_label} — {chance}%.\"\n",
-        "        else:\n",
-        "            response += f\"There is a low chance of rain {day_label} — {chance}%. \"\n",
-        "    elif attribute == \"sunny\" and days != -1:\n",
-        "        if item['rain percentage'] > 50:\n",
-        "          return f\"is a sunny da y\"\n",
-        "        else:\n",
-        "          return f\"is rainy day. \"\n",
-        "    elif attribute == \"weather condition\":\n",
-        "        response += f\"is {item['weather condition']} \"\n",
-        "    elif attribute == \"precipitation\":\n",
-        "        response += f\"is {item['precipitation']}mm \"\n",
-        "    else:\n",
-        "        return f\"Please restructure your sentence.\"\n",
-        "\n",
-        "    return response"
+        "    if item_date == today:\n",
+        "        return \"today\"\n",
+        "    elif item_date == tomorrow:\n",
+        "        return \"tomorrow\"\n",
+        "    return f\"on {item_date}\""
       ],
       "metadata": {
         "id": "237r3P20FhbU"
       },
-      "execution_count": 44,
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def weather_attributes_response(response, attribute, item, days=0):\n",
+        "    # Mapping of attributes to response formats\n",
+        "    attribute_map = {\n",
+        "        \"temperature\": f\"is around {item['temperature']}°C \",\n",
+        "        \"humidity\": f\"is {item['humidity']}% \",\n",
+        "        \"wind speed\": f\"is {item['wind speed']} km/h \",\n",
+        "        \"weather condition\": f\"is {item['weather condition']} \",\n",
+        "        \"precipitation\": f\"is {item['precipitation']}mm \"\n",
+        "    }\n",
+        "\n",
+        "    # Check for standard attributes\n",
+        "    if attribute in attribute_map:\n",
+        "        response += attribute_map[attribute]\n",
+        "        return response\n",
+        "\n",
+        "    # Special handling for \"chance of rain\"\n",
+        "    if attribute == \"chance of rain\" and days != -1:\n",
+        "        item_date = datetime.strptime(item['datetime'], \"%Y-%m-%d\").date()\n",
+        "        day_label = format_day_label(item_date)\n",
+        "        chance = item['rain percentage']\n",
+        "        rain_status = \"high\" if chance > 50 else \"low\"\n",
+        "        response += f\"There is a {rain_status} chance of rain {day_label} — {chance}%. \"\n",
+        "        return response\n",
+        "\n",
+        "    # Special handling for \"sunny\"\n",
+        "    if attribute == \"sunny\" and days != -1:\n",
+        "        is_sunny = item['rain percentage'] <= 50\n",
+        "        response += \"is a sunny day.\" if is_sunny else \"is a rainy day.\"\n",
+        "        return response\n",
+        "\n",
+        "    # Fallback for unsupported attributes\n",
+        "    return f\"Please restructure your sentence.\""
+      ],
+      "metadata": {
+        "id": "rnggI3erIKnt"
+      },
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -1201,35 +1213,30 @@
         "    days = parsed_question.get(\"days\", 1)\n",
         "    attribute = parsed_question.get(\"attribute\", \"weather condition\")\n",
         "    response = \"\"\n",
+        "\n",
+        "    # Mapping for day descriptions\n",
+        "    day_map = {-1: \"current\", 0: \"today\", 1: \"tomorrow\"}\n",
+        "    day_desc = day_map.get(days, f\"in {days} days\")\n",
+        "\n",
         "    # Choose current data or forecast\n",
         "    if days == -1:\n",
-        "        if \"current\" in weather_data and weather_data[\"current\"]:\n",
-        "            data = weather_data[\"current\"][0]\n",
-        "        else:\n",
+        "        data = weather_data.get(\"current\", [])\n",
+        "        if not data:\n",
         "            return f\"Sorry, I couldn't retrieve current weather data for {location}.\"\n",
+        "        data = data[0]  # Extract the single current weather entry\n",
         "    else:\n",
-        "        if \"forecast\" in weather_data and weather_data[\"forecast\"]:\n",
-        "            data = weather_data[\"forecast\"]\n",
-        "        else:\n",
+        "        data = weather_data.get(\"forecast\", [])\n",
+        "        if not data:\n",
         "            return f\"Sorry, I couldn't retrieve forecast data for {location}.\"\n",
         "\n",
-        "    if days == 0 and attribute != \"chance of rain\":\n",
-        "        response = f\"The {attribute} today in {location} \"\n",
+        "    # Formulate the response\n",
+        "    if days <= 1:\n",
+        "        response = f\"The {attribute} {day_desc} in {location} \"\n",
         "        response = weather_attributes_response(response, attribute, data[0], days)\n",
-        "    elif days == 0 and attribute == \"chance of rain\":\n",
-        "        response = weather_attributes_response(response, attribute, data[0], days)\n",
-        "\n",
-        "    if days == 1 and attribute != \"chance of rain\":\n",
-        "        response = f\"The {attribute} tomorrow in {location} \"\n",
-        "        response = weather_attributes_response(response, attribute, data[1], days)\n",
-        "    elif days == 1 and attribute == \"chance of rain\":\n",
-        "        response = weather_attributes_response(response, attribute, data[1], days)\n",
-        "\n",
-        "    if days > 1:\n",
+        "    else:\n",
         "        response = f\"The {attribute} in {location}: \"\n",
         "        for item in data:\n",
-        "            if attribute != \"chance of rain\":\n",
-        "                response += f\"on {item['datetime']} \"\n",
+        "            response += f\"on {item['datetime']} \"\n",
         "            response = weather_attributes_response(response, attribute, item, days)\n",
         "\n",
         "    return response\n"
@@ -1237,7 +1244,7 @@
       "metadata": {
         "id": "fS2AW7nr_ykv"
       },
-      "execution_count": 46,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -1250,15 +1257,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YPqXQrsTAr5j",
-        "outputId": "41d7e29c-162e-48f4-da5c-f498a4e65592"
+        "outputId": "fd205929-8c20-4d27-8343-ea9325ecf7f4"
       },
-      "execution_count": 47,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The temperature today in Kuala Lumpur is around 28.0°C <br>\n"
+            "The chance of rain in kuala lumpur: <br>on 2025-05-07 There is a high chance of rain today — 82%.<br>on 2025-05-08 There is a high chance of rain tomorrow — 89%.<br>on 2025-05-09 There is a high chance of rain on 2025-05-09 — 88%.<br>on 2025-05-10 There is a high chance of rain on 2025-05-10 — 89%.<br>on 2025-05-11 There is a high chance of rain on 2025-05-11 — 89%.<br>\n"
           ]
         }
       ]
