--- a/Weather_Advisor.ipynb
+++ b/Weather_Advisor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPqtFwZtBNCSwV+wmNir17C",
+      "authorship_tag": "ABX9TyPx+rwLGQ0XEbZ7otw7oY/A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "id": "WlBfP3H7GTA0",
         "outputId": "484f9717-d4db-4ff6-fd3e-8913cfffa865"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,12 +86,12 @@
       "metadata": {
         "id": "gS5tbInPGLeh"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "NbhkyXR4Gjs7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +427,7 @@
       "metadata": {
         "id": "pizT4Mk4Gyoi"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +483,7 @@
       "metadata": {
         "id": "zUClCbVTLfdS"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -537,7 +537,7 @@
       "metadata": {
         "id": "jxMg5lY1nqwH"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -602,10 +602,9 @@
         "        days = 0\n",
         "    elif \"tomorrow\" in q_lower or \"next day\" in q_lower:\n",
         "        days = 1\n",
-        "    elif match := re.search(r\"next (\\d+) days\", q_lower):\n",
+        "    elif match := re.search(r\"(?:next|in) (\\d+) days?\", q_lower):\n",
         "        days = int(match.group(1))\n",
-        "    elif match := re.search(r\"in (\\d+) days\", q_lower):\n",
-        "        days = int(match.group(1))\n",
+        "\n",
         "\n",
         "    # Step 7: Return the structured result\n",
         "    return {\n",
@@ -617,7 +616,7 @@
       "metadata": {
         "id": "0Z9oc2X_wcFj"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,7 +635,7 @@
       "metadata": {
         "id": "237r3P20FhbU"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -669,7 +668,7 @@
         "    # Special handling for \"sunny\"\n",
         "    if attribute == \"sunny\" and days != -1:\n",
         "        is_sunny = item['rain percentage'] <= 50\n",
-        "        response += \"is a sunny day.\" if is_sunny else \"is a rainy day.\"\n",
+        "        response += \"is a sunny day.\" if is_sunny else \"is a rainy day.<br>\"\n",
         "        return response\n",
         "\n",
         "    # Fallback for unsupported attributes\n",
@@ -678,7 +677,7 @@
       "metadata": {
         "id": "rnggI3erIKnt"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -720,7 +719,7 @@
       "metadata": {
         "id": "fS2AW7nr_ykv"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -772,7 +771,7 @@
       "metadata": {
         "id": "ct2ee4euP_8P"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -832,7 +831,7 @@
       "metadata": {
         "id": "CmRavlJ8JHOb"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -876,7 +875,7 @@
       "metadata": {
         "id": "NZdVtj8FQGMN"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -949,7 +948,7 @@
       "metadata": {
         "id": "TfyeTjAIScqG"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -965,7 +964,7 @@
         "id": "BqIFrpBgSeMk",
         "outputId": "ddcb3215-8d59-49e9-d368-38a79e1b6a3f"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1183,7 +1182,7 @@
         "id": "SsfX7NxVSfAL",
         "outputId": "39824b6a-c55f-4fe2-d5c9-18809e25a716"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1576,7 +1575,7 @@
         "id": "PbhcNIJAShWL",
         "outputId": "8f735fa3-c2c4-43bf-8b34-d0998f78cac6"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1603,7 +1602,7 @@
         "id": "WRIK0s3lSjw_",
         "outputId": "3cfb7380-ec36-4792-c5e7-88b9f2659ab8"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1630,7 +1629,7 @@
         "id": "-t3B7yibSnXZ",
         "outputId": "f7052bf8-3a87-4c90-d197-00787fec1244"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1654,7 +1653,7 @@
         "id": "ccmrKniBSoit",
         "outputId": "6af2bf3d-2ced-447a-a591-c31d17707c1f"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
